[gd_scene load_steps=6 format=3 uid="uid://b5y5ri5hcom0n"]

[ext_resource type="Script" path="res://ver_1/actions/items/turret.gd" id="1_4q33v"]
[ext_resource type="Texture2D" uid="uid://cabvgx33180x0" path="res://assets/UI/healthbar.png" id="1_ndtoy"]
[ext_resource type="Texture2D" uid="uid://c036taaprfs1p" path="res://assets/vfx/WhiteCircle.png" id="3_wcshd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oyowo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ex4ed"]
radius = 314.006

[node name="Turret" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_4q33v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oyowo")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_ex4ed")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_ndtoy")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="AoESprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 1, 1, 0.176471)
texture = ExtResource("3_wcshd")

[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
